targets/slideruleearth-aws/cloudformation/cluster.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: SlideRule Cluster

##############################
Parameters:

  Version:
    Type: String

  EnvironmentVersion:
    Type: String

  IsPublic:
    Type: String

  Domain:
    Type: String

  ClusterName:
    Type: String

  Organization:
    Type: String

  ProjectBucket:
    Type: String

  ProjectFolder:
    Type: String

  ProjectPublicBucket:
    Type: String

  ContainerRegistry:
    Type: String

  NodeCapacity:
    Type: Number

  #
  # Constants
  #

  ManagerIP:
    Type: String
    Default: "10.0.1.3"

  MonitorIP:
    Type: String
    Default: "10.0.1.4"

  IlbIP:
    Type: String
    Default: "10.0.1.5"

  AvailabilityZone:
    Type: String
    Default: "us-west-2d"

  PublicCIDRBlock:
    Type: String
    Default: "0.0.0.0/0"

  VpcCIDRBlock:
    Type: String
    Default: "10.0.0.0/16"

##############################
Resources:

  #
  # Network
  #

  SlideruleVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDRBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-vpc"

  SlideruleSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SlideruleVPC
      CidrBlock: "10.0.0.0/16"
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Ref AvailabilityZone
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-subnet"

  SlideruleIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-gateway"

  AttachIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref SlideruleIGW
      VpcId: !Ref SlideruleVPC

  SlideruleRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SlideruleVPC
      Tags:
        - Key: Name
          Value: !Sub "${Organization}-route"

  SlideruleRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref SlideruleRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref SlideruleIGW

  RouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SlideruleSubnet
      RouteTableId: !Ref SlideruleRouteTable

  #
  # IAM Roles
  #

  ClusterRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
        - arn:aws:iam::aws:policy/CloudWatchAgentAdminPolicy
      Policies:
        - PolicyName: !Sub "${ClusterName}-secrets-access"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - secretsmanager:GetSecretValue
                Resource: !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:slideruleearth.io/secrets-*
        - PolicyName: !Sub "${ClusterName}-s3-access"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action: ["s3:ListBucket"]
                Resource:
                  - arn:aws:s3:::sliderule
                  - arn:aws:s3:::sliderule-public
                  - arn:aws:s3:::pgc-opendata-dems
                  - arn:aws:s3:::prd-tnm
                  - arn:aws:s3:::esa-worldcover
                  - arn:aws:s3:::noaa-ocs-nationalbathymetry-pds
                  - arn:aws:s3:::dataforgood-fb-data
              - Effect: Allow
                Action: ["s3:GetObject"]
                Resource:
                  - arn:aws:s3:::sliderule/*
                  - arn:aws:s3:::sliderule-public/*
                  - arn:aws:s3:::pgc-opendata-dems/*
                  - arn:aws:s3:::prd-tnm/*
                  - arn:aws:s3:::esa-worldcover/*
                  - arn:aws:s3:::noaa-ocs-nationalbathymetry-pds/*
                  - arn:aws:s3:::dataforgood-fb-data/*
              - Effect: Allow
                Action: ["s3:PutObject"]
                Resource:
                  - !Sub "arn:aws:s3:::${ProjectBucket}/${ProjectFolder}/manager/*"
                  - !Sub "arn:aws:s3:::${ProjectPublicBucket}/*"
        - PolicyName: !Sub "${ClusterName}-ec2-access"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ec2:DescribeInstances
                  - ec2:TerminateInstances
                Resource: "*"

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles: [!Ref ClusterRole]

  #
  # Security Groups
  #

  MonitorSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Monitor Security Group
      VpcId: !Ref SlideruleVPC
      SecurityGroupIngress:
        # Loki (from Promtail)
        - IpProtocol: tcp
          FromPort: 3100
          ToPort: 3100
          CidrIp: !Ref VpcCIDRBlock
        # NGINX (from HAProxy)
        - IpProtocol: tcp
          FromPort: 8040
          ToPort: 8040
          CidrIp: !Ref VpcCIDRBlock
      SecurityGroupEgress:
        # ALL
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: !Ref PublicCIDRBlock
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-monitor-sg"

  IlbSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ILB Security Group
      VpcId: !Ref SlideruleVPC
      SecurityGroupIngress:
        # HAProxy
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref PublicCIDRBlock
        # Orchestrator (from HAProxy)
        - IpProtocol: tcp
          FromPort: 8050
          ToPort: 8050
          CidrIp: !Ref VpcCIDRBlock
        # Node Exporter (from Prometheus)
        - IpProtocol: tcp
          FromPort: 9100
          ToPort: 9100
          CidrIp: !Ref VpcCIDRBlock
      SecurityGroupEgress:
        # ALL
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: !Ref PublicCIDRBlock
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-ilb-sg"

  ManagerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Manager Security Group
      VpcId: !Ref SlideruleVPC
      SecurityGroupIngress:
        # Manager (from HAProxy)
        - IpProtocol: tcp
          FromPort: 8030
          ToPort: 8030
          CidrIp: !Ref VpcCIDRBlock
      SecurityGroupEgress:
        # ALL
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: !Ref PublicCIDRBlock
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-manager-sg"

  SlideruleSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Sliderule app SG
      VpcId: !Ref SlideruleVPC
      SecurityGroupIngress:
        # SlideRule (from HAProxy)
        - IpProtocol: tcp
          FromPort: 9081
          ToPort: 9081
          CidrIp: !Ref VpcCIDRBlock
        # Node Exporter (from Prometheus)
        - IpProtocol: tcp
          FromPort: 9100
          ToPort: 9100
          CidrIp: !Ref VpcCIDRBlock
      SecurityGroupEgress:
        # ALL
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: !Ref PublicCIDRBlock
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-sliderule-sg"

  #
  # ILB
  #

  IlbInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Sub "{{resolve:ssm:/ami/sliderule/arm/latest}}"
      InstanceType: c8g.large
      AvailabilityZone: !Ref AvailabilityZone
      IamInstanceProfile: !Ref InstanceProfile
      SourceDestCheck: true
      Monitoring: false
      NetworkInterfaces:
        - DeviceIndex: 0
          PrivateIpAddress: !Ref IlbIP
          AssociatePublicIpAddress: true
          SubnetId: !Ref SlideruleSubnet
          GroupSet:
            - !Ref IlbSG
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 40
            VolumeType: gp3
            DeleteOnTermination: true
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-ilb"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin ${ContainerRegistry}
          SECRET=$(aws secretsmanager get-secret-value --region us-west-2 --secret-id ${Domain}/secrets --query SecretString --output text)
          export OAUTH_HMAC_SECRET=$(echo $SECRET | jq -r .jwt_secret_key)
          export IS_PUBLIC=${IsPublic}
          export ORGANIZATION=${Organization}
          export DOMAIN=${Domain}
          export ILB_IMAGE=${ContainerRegistry}/ilb:${Version}
          mkdir -p /etc/ssl/private
          aws s3 cp s3://${ProjectBucket}/${ProjectFolder}/${Domain}.pem /etc/ssl/private/${Domain}.pem
          aws s3 cp s3://${ProjectBucket}/${ProjectFolder}/docker-compose-ilb.yml ./docker-compose.yml
          docker-compose -p cluster up --detach

  #
  # Manager
  #

  ManagerInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Sub "{{resolve:ssm:/ami/sliderule/arm/latest}}"
      InstanceType: r8g.large
      AvailabilityZone: !Ref AvailabilityZone
      IamInstanceProfile: !Ref InstanceProfile
      SourceDestCheck: true
      Monitoring: false
      NetworkInterfaces:
        - DeviceIndex: 0
          PrivateIpAddress: !Ref ManagerIP
          AssociatePublicIpAddress: true
          SubnetId: !Ref SlideruleSubnet
          GroupSet:
            - !Ref ManagerSG
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 40
            VolumeType: gp3
            DeleteOnTermination: true
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-manager"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          echo ${ClusterName} > ./clustername.txt
          aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin ${ContainerRegistry}
          SECRET=$(aws secretsmanager get-secret-value --region us-west-2 --secret-id ${Domain}/secrets --query SecretString --output text)
          export IS_PUBLIC=${IsPublic}
          export DOMAIN=${Domain}
          export MANAGER_SECRET_SALT=$(echo $SECRET | jq -r .manager_secret_salt)
          export MANAGER_API_KEY=$(echo $SECRET | jq -r .manager_api_key)
          export DUCKDB_LOCAL_FILE='/data/manager-${ClusterName}.db'
          export DUCKDB_REMOTE_FILE='s3://${ProjectBucket}/${ProjectFolder}/manager/manager-${Organization}-${Version}.db'
          export MANAGER_IMAGE=${ContainerRegistry}/manager:${Version}
          mkdir /data
          aws s3 cp $DUCKDB_REMOTE_FILE $DUCKDB_LOCAL_FILE || true
          aws s3 cp s3://${ProjectBucket}/${ProjectFolder}/GeoLite2-ASN.mmdb /data/GeoLite2-ASN.mmdb
          aws s3 cp s3://${ProjectBucket}/${ProjectFolder}/GeoLite2-City.mmdb /data/GeoLite2-City.mmdb
          aws s3 cp s3://${ProjectBucket}/${ProjectFolder}/GeoLite2-Country.mmdb /data/GeoLite2-Country.mmdb
          aws s3 cp s3://${ProjectBucket}/${ProjectFolder}/docker-compose-manager.yml ./docker-compose.yml
          docker-compose -p cluster up --detach

  #
  # Monitor
  #

  MonitorInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Sub "{{resolve:ssm:/ami/sliderule/arm/latest}}"
      InstanceType: c8g.large
      AvailabilityZone: !Ref AvailabilityZone
      IamInstanceProfile: !Ref InstanceProfile
      SourceDestCheck: true
      Monitoring: false
      NetworkInterfaces:
        - DeviceIndex: 0
          PrivateIpAddress: !Ref MonitorIP
          AssociatePublicIpAddress: true
          SubnetId: !Ref SlideruleSubnet
          GroupSet:
            - !Ref MonitorSG
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 40
            VolumeType: gp3
            DeleteOnTermination: true
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-monitor"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          echo ${ClusterName} > ./clustername.txt
          aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin ${ContainerRegistry}
          SECRET=$(aws secretsmanager get-secret-value --region us-west-2 --secret-id ${Domain}/secrets --query SecretString --output text)
          export CLIENT_ID=$(echo $SECRET | jq -r .client_id)
          export CLIENT_SECRET=$(echo $SECRET | jq -r .client_secret)
          export DOMAIN=${Domain}
          export MONITOR_IMAGE=${ContainerRegistry}/monitor:${Version}
          export PROXY_IMAGE=${ContainerRegistry}/proxy:${Version}
          aws s3 cp s3://${ProjectBucket}/${ProjectFolder}/docker-compose-monitor.yml ./docker-compose.yml
          docker-compose -p cluster up --detach

  #
  # Autoscaling Group
  #

  SlideruleLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Sub "${ClusterName}-lt"
      LaunchTemplateData:
        ImageId: !Sub "{{resolve:ssm:/ami/sliderule/arm/latest}}"
        InstanceType: t4g.2xlarge
        IamInstanceProfile:
          Name: !Ref InstanceProfile
        NetworkInterfaces:
          - AssociatePublicIpAddress: true
            DeviceIndex: 0
            Groups:
              - !Ref SlideruleSG
        BlockDeviceMappings:
          - DeviceName: "/dev/xvda"
            Ebs:
              VolumeSize: 100
              VolumeType: gp3
              DeleteOnTermination: true
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            export ENVIRONMENT_VERSION=${EnvironmentVersion}
            export IPV4=$(hostname -I | awk '{print $1}')
            export ORGANIZATION=${Organization}
            export CLUSTER=${ClusterName}
            export IS_PUBLIC=${IsPublic}
            export SLIDERULE_IMAGE=${ContainerRegistry}/sliderule:${Version}
            export AMS_IMAGE=${ContainerRegistry}/ams:${Version}
            export PROVISIONING_SYSTEM="https://ps.${Domain}"
            export CONTAINER_REGISTRY=${ContainerRegistry}
            aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin ${ContainerRegistry}
            mkdir -p /data/ATL13
            aws s3 cp s3://${ProjectBucket}/${ProjectFolder}/atl13_mappings.json /data/ATL13/atl13_mappings.json
            aws s3 cp s3://${ProjectBucket}/${ProjectFolder}/inland_water_body.db /data/ATL13/inland_water_body.db
            aws s3 cp s3://${ProjectBucket}/plugins/ /plugins/ --recursive
            aws s3 cp s3://${ProjectBucket}/${ProjectFolder}/docker-compose-node.yml ./docker-compose.yml
            docker-compose -p cluster up --detach

  SlideruleAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Sub "${ClusterName}-asg"
      MinSize: !Ref NodeCapacity
      MaxSize: !Ref NodeCapacity
      DesiredCapacity: !Ref NodeCapacity
      VPCZoneIdentifier:
        - !Ref SlideruleSubnet
      HealthCheckType: EC2
      CapacityRebalance: true
      LaunchTemplate:
        LaunchTemplateId: !Ref SlideruleLaunchTemplate
        Version: !GetAtt SlideruleLaunchTemplate.LatestVersionNumber
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-node"
          PropagateAtLaunch: true

  #
  # Route53
  #

  IlbRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: !Sub "${Domain}."   # ensure trailing dot or you can pass HostedZoneId instead
      Name: !Sub "${ClusterName}.${Domain}"
      Type: A
      TTL: "300"
      ResourceRecords:
        - !GetAtt IlbInstance.PublicIp
